# x402_concept

./: .gitignore  AGENTS.md  Dockerfile  INTEGRATOR.md  README.md  ROADMAP.md  ai-apply.sh  ai-pack.sh  ai-status.sh  chain_agnostic_x402_concept.md  docker-compose.yml  package.json  verified_agent_fiat_buy_x402easy_concept.md  whitepaper.md  x402easy_scaffold.patch
.ai/: task.md
ai-file-bridge/: README.md
backend/: .env.example  config.json  package-lock.json  package.json  server.js
backend/lib/: authorization.js  config.js  networks.js  paymentWatcher.js  settlement.js  state.js
backend/lib/adapters/: algo.js  evm.js
backend/routes/: api.js
backend/src/: server.js
backend/src/config/: paymentConfig.js
backend/src/routes/: configRoutes.js  (+1 more)
bridge-worker/: .env.example  package-lock.json  package.json
bridge-worker/scripts/: algo-to-bsc.mjs
config/: config.example.json  config.json  config.schema.json
contracts/: README.md  foundry.toml
contracts/script/: DeployTreasury.s.sol
contracts/src/: X402Treasury.sol
docs/: BRIDGE_ALGO_BSC.md  DEPLOY_BSC_TREASURY.md  SETTLEMENT_TESTNET.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  polyfills.ts  styles.css  vite-env.d.ts
scripts/: deploy-bsc-treasury.sh  settlement-demo.sh
x402-module/: .env.example  Cargo.toml
x402-module/src/: admin.rs  authorization.rs  config.rs  main.rs  payment_watcher.rs  routes.rs  settlement.rs  state.rs
x402-module/src/adapters/: algo.rs  balances.rs  evm.rs  mod.rs
(+19 files in other folders)
